# Nexus

./: .gitignore  README.md  test-plan.md  test-report.md  threat-intel-test-report.md
backend/: pyproject.toml
backend/app/: engine.py  main.py  models.py
backend/app/threat_intel/: __init__.py  blockchain.py  github_chatter.py  models.py  ransomware.py  routes.py  scoring.py
backend/app/tools/: __init__.py  earthquakes.py  flights.py  geocode.py  weather.py
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  DataCards.tsx  MapView.tsx  ThreatIntel.tsx
frontend/lib/: api.ts  threat.ts  types.ts
